# JC3D

./: .gitignore  CMakeLists.txt  README.md  Windows-GenProject.bat  collect_dependencies.old.py  collect_dependencies.py  dependencies.json
CMake/: FindASSIMP.cmake  FindFMT.cmake  FindGLAD.cmake  FindGLEW.cmake  FindGLFW.cmake  FindImGui.cmake  FindSPDLOG.cmake  FindSTB.cmake  utils.cmake
Engine/: CMakeLists.txt  dependencies.json
Engine/Source/Private/: Application.cpp  Layer.cpp  LayerStack.cpp  Logger.cpp  Window.cpp
Engine/Source/Private/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Engine/Source/Private/Math/: MathFunctions.cpp  Quaternion.cpp
Engine/Source/Private/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp  OpenGLCubemap.cpp  OpenGLFramebuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Engine/Source/Private/Platform/Windows/: Win32Input.cpp  Win32Time.cpp  Win32TimeContext.cpp  Win32Window.cpp  Win32Windows.cpp
Engine/Source/Private/Renderer/: Camera.cpp  Cubemap.cpp  Framebuffer.cpp  IndexBuffer.cpp  Mesh.cpp  PBRLayer.cpp  QuadPrimitive.cpp  RenderCommandQueue.cpp  Renderer.cpp  SceneObject.cpp  Shader.cpp  Texture.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/Source/Private/System/: File.cpp
Engine/Source/Private/Utilities/: ImageLoad.cpp  Logger.cpp
Engine/Source/Public/: Application.h  Common.h  Core.h  Engine.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Logger.h  MouseButtonCodes.h  Time.h  TimeContext.h  Window.h
Engine/Source/Public/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Source/Public/ImGui/: ImGuiLayer.h
Engine/Source/Public/Math/: MathFunctions.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
Engine/Source/Public/Platform/OpenGL/: ImGuiOpenGLRenderer.h  OpenGLContext.h  OpenGLConvertHelper.h  OpenGLCubemap.h  OpenGLFramebuffer.h  OpenGLIndexBuffer.h  OpenGLShader.h  OpenGLTexture2D.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Engine/Source/Public/Platform/Windows/: Win32Input.h  Win32Time.h  Win32TimeContext.h  Win32Window.h  Win32Windows.h
Engine/Source/Public/Renderer/: BufferElement.h  BufferLayout.h  Camera.h  Cubemap.h  Framebuffer.h  IndexBuffer.h  Material.h  Mesh.h  PBRLayer.h  QuadPrimitive.h  RenderCommandQueue.h  RenderContext.h  Renderer.h  RendererAPI.h  SceneObject.h  Shader.h  ShaderDataType.h  Texture.h  Texture2D.h  VertexArray.h  VertexBuffer.h
Engine/Source/Public/System/: File.h
Engine/Source/Public/Utilities/: FlagEnum.h  ImageLoad.h  Logger.h  MacroUtilities.h  STLUtilities.h
Sandbox/: CMakeLists.txt
Sandbox/Content/: imgui.ini
Sandbox/Content/Meshes/: Faucet.fbx  imgui.ini
Sandbox/Content/Models/: PAT.blend  PAT.fbx  Thanos.mtl  Thanos_complete.fbx  imgui.ini
Sandbox/Content/Models/5 Thanos IW FF/: Thanos.fbx  Thanos.obj.blend  Thanos.obj.blend1  imgui.ini
Sandbox/Content/Shaders/: pbr.glsl
Sandbox/Content/Textures/cerberus/: imgui.ini
Sandbox/Content/Textures/pbr/gold/: imgui.ini
Sandbox/Source/Private/: main.cpp
Sandbox/Source/Public/: EditorLayer.h  ImGuiHelper.h  PBRLayer.h
scripts/: collect_dependencies.py  setup.py
